# cashier-game

./: CMakeLists.txt  README.md  TODO  main.cpp
src/: Bag.cpp  Bag.h  Collider.cpp  Collider.h  DialogueBox.cpp  DialogueBox.h  Food.cpp  Food.h  Hand.cpp  Hand.h  Input.cpp  Input.h  LinkedList.cpp  LinkedList.h  Person.cpp  Person.h  Scanner.cpp  Scanner.h  StateMachine.cpp  StateMachine.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/states/: Interview.cpp  Interview.h  Results.cpp  Results.h  Store.cpp  Store.h  TitleScreen.cpp  TitleScreen.h
